reportbug (3.31) unstable; urgency=low

  * Add po4a support for translating man pages.  (Closes: #392458)
  * More ehlo/helo madness.
  * Change default for get_string() in the urwid interface to ''.
    (Closes: #392608)

 --

reportbug (3.30) unstable; urgency=low

  * Put bugs that are fixed in subsequent releases at the top of the bug
    browser; this should hopefully reduce the incidence of duplicate
    reports.  (Note that some bugs that are closed may appear at the top
    due to known problems in debbugs.)
  * Don't allow tab-expansion of the realname in offer_configuration(); this
    should resolve the encoding issues that some people have been bumping
    into.
  * When some recipients are refused, inform the user and dump the report
    in a temporary file.  (Closes: #387691)
  * Bypass vi nag when $EDITOR is set.  (Closes: #388437)
  * Add an extra EHLO when doing STARTTLS, since (contrary to the smtplib
    documentation) smtplib seems to need it.  (Closes: #3226523)
  * Fix crash when bugtitle lacks a colon.  (Closes: #389259)
  
 -- Chris Lawrence <lawrencc@debian.org>  Thu, 28 Sep 2006 21:16:38 -0500

reportbug (3.29.5) unstable; urgency=low

  * Fix missing parenthesis in offer_configuration.  (Closes: #386737)

 -- Chris Lawrence <lawrencc@debian.org>  Sun, 10 Sep 2006 13:53:12 -0500

reportbug (3.29.4) unstable; urgency=low

  * Fixup handling of "any_ok" dialogs in urwid interface.
    (Closes: #385810)
  * Handle non-ASCII encodings better in offer_configuration().
    (Closes: #385597)
  * Also handle them better when dealing with the editor.
    (Closes: #386463)

 -- Chris Lawrence <lawrencc@debian.org>  Sun,  3 Sep 2006 19:21:48 -0500

reportbug (3.29.3) unstable; urgency=low

  * Fix crash when the maintainer field is unavailable.  (Closes: #384778)

 -- Chris Lawrence <lawrencc@debian.org>  Sat, 26 Aug 2006 11:37:17 -0500

reportbug (3.29.2) unstable; urgency=medium

  * Fallback gracefully when the selected UI can't be imported.